# db-api

./: .env  Cargo.toml  LICENSE-MIT  README.md  Rocket.toml  schema.sql
.cargo/: config
src/: curd.rs  main.rs  schema.rs
src/api/: active.rs  active_code.rs  check_code.rs  device.rs  mod.rs  task.rs  user.rs  users.rs
src/console/: mod.rs
src/console/device/: model.rs  routes.rs
src/console/task/: model.rs  routes.rs
src/db/: user.rs
src/user/: mod.rs
src/user/active_code/: model.rs  routes.rs
src/user/check_code/: model.rs  routes.rs
src/user/users/: model.rs  routes.rs
