[package]
name = "db-api"
version = "0.1.0"
authors = ["Spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4"
features = ["chrono"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["json", "diesel_mysql_pool"]
